moving notes in board

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+.board {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  top: 0;
+  padding: 1em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board-title {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* #ff65a3, #feff9c */
+.note {
+  width: 12em;
+  height: 12em;
+  padding: 1em;
+  box-shadow: 1px 2px 5px rgba(0,0,0,.35);
+  margin: 1em;
+  border-radius: 3px;
+  position: absolute;
+  transition: z-index .3s, opacity .6s, width .7s, height .7s;
+  opacity: .9;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.note:hover {
+  z-index: 1000;
+  opacity: 1;
+  /* width: 30em;
+  height: 18em; */
 }
 
-.App-link {
-  color: #61dafb;
+.note .title {
+  font-weight: 600;
+  margin: 0;
+  border:none;
+  background-color: transparent;
+  padding: 4px;
+  border-radius: 4px;
+  /* box-shadow: 0 2px 3px -2px rgba(0,0,0,.2); */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note .title:focus {
+  background-color: rgba(255,255,255,.5);
+  border: 1px solid rgba(0,0,0,.25);
+} 
+
+.drag {
+  height: 2em;
+  width: 2em;
+  position: absolute;
+  left: calc(-2em - 2px);
+  top: 0px;
+  opacity: 0;
+  transition: opacity .3s;
+}
+
+.note:hover .drag {
+  opacity: 1;
 }
